--- a/style.css
+++ b/style.css
@@ -1224,14 +1224,14 @@ svg {
     }
 
     .mobile-sticky-cta {
-        display: block;
+        display: none !important;
     }
 
     .whatsapp-float {
-        bottom: 90px;
+        bottom: 24px;
         right: 15px;
-        width: 50px;
-        height: 50px;
+        width: 55px;
+        height: 55px;
     }
 }
 
